crates/roughly/tests/snapshots/test_format__binary_operator-11.snap
---
source: tests/test_format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        (\n            lhs # lhs\n                + rhs\n        )\n    \"#\n}).unwrap()"
---
(
  lhs # lhs
    + rhs
)
