crates/roughly/tests/snapshots/test_format__binary_operator-3.snap
---
source: src/format.rs
expression: "fmt(indoc! { r#\"\n            x<-1\n        \"# })"
---
x <- 1
