crates/roughly/tests/snapshots/test_format__binary_operator-4.snap
---
source: src/format.rs
expression: "fmt(indoc! { r#\"\n            x<-1;y<-2\n        \"# })"
---
x <- 1
y <- 2
