crates/roughly/tests/snapshots/test_format__binary_operator-5.snap
---
source: src/format.rs
expression: "fmt(indoc! { r#\"\n            foo |>\n                bar\n        \"# })"
---
foo |>
  bar
