crates/roughly/tests/snapshots/test_format__binary_operator-9.snap
---
source: tests/test_format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        foo(\n            1\n        ) + 2\n        (\n            1\n        ) +\n        2\n        1 + foo(\n        2)\n        1 +\n        foo(\n        2)\n    \"#\n}).unwrap()"
---
foo(
  1
) + 2
(
  1
) +
  2
1 + foo(
  2
)
1 +
  foo(
    2
  )
