crates/roughly/tests/snapshots/test_format__braced_expression-10.snap
---
source: tests/test_format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        { # {\n            # 1\n            body # body\n            # 2\n        } # }\n    \"#\n}).unwrap()"
---
{ # {
  # 1
  body # body
  # 2
} # }
