crates/roughly/tests/snapshots/test_format__braced_expression-11.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc! {r#\"\n        { expr # comment\n        }\n    \"#}).unwrap()"
---
{
  expr # comment
}
