crates/roughly/tests/snapshots/test_format__braced_expression-2.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        { expr;expr}\n\n        { expr; expr\n        }\n\n        {\n        expr; expr }\n\n        {\n        expr; expr\n        }\n\n        { expr; lhs +\n            rhs }\n    \"#}).unwrap()"
---
{ expr; expr }

{ expr; expr }

{
  expr
  expr
}

{
  expr
  expr
}

{
  expr
  lhs +
    rhs
}
