crates/roughly/tests/snapshots/test_format__braced_expression-5.snap
---
source: src/format.rs
expression: "fmt(indoc!\n{ r#\"\n            {\n                a # foo\n            }\n        \"# })"
---
{
  a # foo
}
