crates/roughly/tests/snapshots/test_format__braced_expression-8.snap
---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n            {\n                a\n\n                b\n            }\n        \"#\n})"
---
{
  a

  b
}
