crates/roughly/tests/snapshots/test_format__braced_expression.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        {}\n\n        {\n        }\n\n\n        { expr }\n\n        { expr\n        }\n\n        {\n        expr }\n\n        {\n        expr\n        }\n\n        { lhs +\n            rhs }\n    \"#}).unwrap()"
---
{}

{}

{ expr }

{ expr }

{
  expr
}

{
  expr
}

{
  lhs +
    rhs
}
