crates/roughly/tests/snapshots/test_format__call-10.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n    \tfn(arg1, fn(\n            arg\n        ) # comment\n        )\n    \"#}).unwrap()"
---
fn(
  arg1,
  fn(
    arg
  ) # comment
)
